# mao

./: Cargo.toml  build.rs  gen.py
proto/: items.proto
src/: data.rs  items.rs  main.rs
