[package]
name = "mao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "*"
actix-web-actors = "*"
env_logger = "*"
bytestring = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
